--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
-	loader_version=0.14.22
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.4
+	loader_version=0.14.23
 
 # Mod Properties
-	mod_version = 1.0
+	mod_version = 1.20.2-1.0.0
 	maven_group = com.bigenergy
 	archives_base_name = AchievementOptimizer-fabric
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.89.0+1.20.1
+	fabric_version=0.90.0+1.20.2
